Fixes 'spo page section remove' docs

--- a/docs/docs/cmd/spo/page/page-section-remove.mdx
+++ b/docs/docs/cmd/spo/page/page-section-remove.mdx
@@ -14,7 +14,7 @@ m365 spo page section remove [options]
 
 ## Options
 
-```md definition-remove
+```md definition-list
 `-u, --webUrl <webUrl>`
 : URL of the site where the page is located.
 
