New command: viva engage community remove

--- a/docs/docs/cmd/viva/engage/engage-community-remove.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-remove.mdx
@@ -32,7 +32,7 @@ m365 viva engage community remove [options]
 
 :::info
 
-When the Viva Engage community is removed, all the associated Microsoft 365 content, including the M365 group, the document library, OneNote notebook, and Planner plans is deleted.
+When the Viva Engage community is removed, all the associated Microsoft 365 content, including the M365 group, the document library, OneNote notebook, and Planner plan is deleted.
 
 :::
 
