Update m365 entra policy list command with latest supported policy types

--- a/docs/docs/cmd/entra/policy/policy-list.mdx
+++ b/docs/docs/cmd/entra/policy/policy-list.mdx
@@ -16,7 +16,7 @@ m365 entra policy list [options]
 
 ```md definition-list
 `-t, --type [type]`
-: The type of policies to return. Allowed values `activityBasedTimeout`, `authorization`, `claimsMapping`, `homeRealmDiscovery`, `identitySecurityDefaultsEnforcement`, `tokenIssuance`, `tokenLifetime`. If omitted, all policies are returned.
+: The type of policies to return. Allowed values `activityBasedTimeout`, `adminConsentRequest`, `appManagement`, `authenticationFlows`, `authenticationMethods`, `authenticationStrength`, `authorization`, `claimsMapping`, `conditionalAccess`, `crossTenantAccess`, `defaultAppManagement`, `deviceRegistration`, `featureRolloutPolicy`, `homeRealmDiscovery`, `identitySecurityDefaultsEnforcement`, `permissionGrant`, `roleManagement`, `tokenIssuance`, `tokenLifetime`. If omitted, all policies are returned.
 ```
 
 <Global />
