Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -21,6 +21,11 @@ sidebar_position: 4
 ### Changes
 
 - removed double slashes on API requests [#6618](https://github.com/pnp/cli-microsoft365/issues/6618)
+- added guide for using the CLI with Azure Functions [#5943](https://github.com/pnp/cli-microsoft365/issues/5943)
+- added new [sample script](../sample-scripts/entra/read-role-permissions/index.mdx) to check role permissions for a user [#6600](https://github.com/pnp/cli-microsoft365/issues/6600)
+- added new [sample script](../sample-scripts/spo/remove-page-header/index.mdx) to remove a page heade [#6629](https://github.com/pnp/cli-microsoft365/issues/6629)
+- fixed link for sample scripts in readme [#6589](https://github.com/pnp/cli-microsoft365/issues/6589)
+- fixed 'page header set' for customizable headers [#6542](https://github.com/pnp/cli-microsoft365/issues/6542)
 
 ## [v10.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.4.0)
 
