Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -26,6 +26,9 @@ sidebar_position: 4
 - added new [sample script](../sample-scripts/spo/remove-page-header/index.mdx) to remove a page heade [#6629](https://github.com/pnp/cli-microsoft365/issues/6629)
 - fixed link for sample scripts in readme [#6589](https://github.com/pnp/cli-microsoft365/issues/6589)
 - fixed 'page header set' for customizable headers [#6542](https://github.com/pnp/cli-microsoft365/issues/6542)
+- extended connections to support using the same user with different app or tenant [#6644](https://github.com/pnp/cli-microsoft365/issues/6644)
+- fixed collecting telemetry behind a proxy
+- updated dependencies
 
 ## [v10.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.4.0)
 
