--- a/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
@@ -25,7 +25,7 @@ m365 viva engage community user add [options]
 : The ID of the Microsoft 365 group. Specify `communityId`, `communityDisplayName` or `entraGroupId`.
 
 `--ids [ids]`
-: Microsoft Entra IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
+: Microsoft Entra IDs of users. You can pass a comma-separated list of multiple IDs. Specify either `ids` or `userNames` but not both.
 
 `--userNames [userNames]`
 : The user principal names of users. You can also pass a comma-separated list of UPNs. Specify either `ids` or `userNames` but not both.
