--- a/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
@@ -28,7 +28,7 @@ m365 viva engage community user add [options]
 : Microsoft Entra IDs of users. You can pass a comma-separated list of multiple IDs. Specify either `ids` or `userNames` but not both.
 
 `--userNames [userNames]`
-: The user principal names of users. You can also pass a comma-separated list of UPNs. Specify either `ids` or `userNames` but not both.
+: The user principal names of users. You can pass a comma-separated list of multiple UPNs. Specify either `ids` or `userNames` but not both.
 
 `-r, --role <role>`
 : The role to be assigned to the new users. Valid values: `Admin`, `Member`.
