Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,11 @@ sidebar_position: 4
 
 - [spo page section remove](../cmd/spo/page/page-section-remove.mdx) - removes a section from a modern page [#6541](https://github.com/pnp/cli-microsoft365/issues/6541)
 
+**Viva:**
+
+- [viva engage community user add](../cmd/viva/engage/engage-community-user-add.mdx) - adds users to a specified Microsoft 365 Viva Engage community [#6293](https://github.com/pnp/cli-microsoft365/issues/6293)
+- [viva engage community user remove](../cmd/viva/engage/engage-community-user-remove.mdx) - removes a user from a specified Microsoft 365 Viva Engage community [#6296](https://github.com/pnp/cli-microsoft365/issues/6296)
+
 ### Changes
 
 - removed double slashes on API requests [#6618](https://github.com/pnp/cli-microsoft365/issues/6618)
