--- a/docs/docs/cmd/spo/homesite/homesite-add.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-add.mdx
@@ -22,7 +22,7 @@ m365 spo homesite add [options]
 : Specifies whether the home site is in draft mode. Accepts `true` or `false`. Default is `false`. 
 
 `--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
-: Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`. Default is true
+: Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`. Default is `true`.
 
 `--audiences [audiences]`
 : Comma-separated list of Microsoft Entra group IDs that will be used as audience.
