--- a/docs/docs/cmd/spo/homesite/homesite-add.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-add.mdx
@@ -28,7 +28,7 @@ m365 spo homesite add [options]
 : Comma-separated list of Microsoft Entra group IDs that will be used as audience.
 
 `--order [order]`
-: Order of the home site. Must be an integer.
+: Order of the home site. Must be a positive integer.
 ```
 
 <Global />
