Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,7 @@ sidebar_position: 4
 
 **SharePoint:**
 
+- [spo homesite add](../cmd/spo/homesite/homesite-add.mdx) - Adds a home site [#6488](https://github.com/pnp/cli-microsoft365/issues/6488)
 - [spo page section remove](../cmd/spo/page/page-section-remove.mdx) - removes a section from a modern page [#6541](https://github.com/pnp/cli-microsoft365/issues/6541)
 
 **Viva:**
@@ -26,14 +27,14 @@ sidebar_position: 4
 ### Changes
 
 - removed double slashes on API requests [#6618](https://github.com/pnp/cli-microsoft365/issues/6618)
-- added guide for using the CLI with Azure Functions [#5943](https://github.com/pnp/cli-microsoft365/issues/5943)
+- added [guide for using the CLI with Azure Functions](../user-guide/automation/azure-function-powershell.mdx) [#5943](https://github.com/pnp/cli-microsoft365/issues/5943)
 - added new [sample script](../sample-scripts/entra/read-role-permissions/index.mdx) to check role permissions for a user [#6600](https://github.com/pnp/cli-microsoft365/issues/6600)
-- added new [sample script](../sample-scripts/spo/remove-page-header/index.mdx) to remove a page heade [#6629](https://github.com/pnp/cli-microsoft365/issues/6629)
+- added new [sample script](../sample-scripts/spo/remove-page-header/index.mdx) to remove a page header [#6629](https://github.com/pnp/cli-microsoft365/issues/6629)
 - fixed link for sample scripts in readme [#6589](https://github.com/pnp/cli-microsoft365/issues/6589)
-- fixed 'page header set' for customizable headers [#6542](https://github.com/pnp/cli-microsoft365/issues/6542)
+- fixed [spo page header set](../cmd/spo/page/page-header-set.mdx) for customizable headers [#6542](https://github.com/pnp/cli-microsoft365/issues/6542)
 - extended connections to support using the same user with different app or tenant [#6644](https://github.com/pnp/cli-microsoft365/issues/6644)
-- fixed collecting telemetry behind a proxy
-- updated dependencies
+- fixed collecting telemetry behind a proxy [#6643](https://github.com/pnp/cli-microsoft365/pull/6643)
+- added support for authenticating using federated identity in GitHub Actions [#6610](https://github.com/pnp/cli-microsoft365/issues/6610)
 
 ## [v10.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.4.0)
 
