Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -35,6 +35,7 @@ sidebar_position: 4
 - extended connections to support using the same user with different app or tenant [#6644](https://github.com/pnp/cli-microsoft365/issues/6644)
 - fixed collecting telemetry behind a proxy [#6643](https://github.com/pnp/cli-microsoft365/pull/6643)
 - added support for authenticating using federated identity in GitHub Actions [#6610](https://github.com/pnp/cli-microsoft365/issues/6610)
+- removed defaultProperties method from various commands [#6432](https://github.com/pnp/cli-microsoft365/issues/6432)
 
 ## [v10.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.4.0)
 
