Adds Azure DevOps guidance

--- a/docs/docs/user-guide/github-actions.mdx
+++ b/docs/docs/user-guide/github-actions.mdx
@@ -1,5 +1,5 @@
 ---
-title: Automate your CI/CD workflow using CLI for Microsoft 365 GitHub Actions
+title: Automate your CI/CD workflow using CLI for Microsoft 365 in GitHub Workflows
 sidebar_position: 12
 ---
 
@@ -353,9 +353,7 @@ One of `M365_CLI_SCRIPT_PATH` / `M365_CLI_SCRIPT` is mandatory, in case both are
 
 :::
 
-## Additional support in scaffolding your workflow
 
-If you need help in setting up your workflow we have a command that will do exactly that for you SPFx project. The [m365 project github workflow add](../cmd/spfx/project/project-github-workflow-add) command will add a GitHub workflow to your SPFx project that will build, package and deploy your solution to your tenant.
 
 ## Contributions and Issues
 
