--- a/docs/docs/cmd/graph/openextension/openextension-add.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-add.mdx
@@ -31,26 +31,33 @@ m365 graph openextension add [options]
 
 This command allows using unknown options to add custom data to the open extension.
 
+When adding an open extension to a user, it's possible to use the UPN as the resourceId.
+
 :::warning[Escaping JSON in PowerShell]
 
-When creating open extension it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
+When creating open extensions it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
 
+:::
 
 ## Examples
 
 Create a new open extension for a user specified by id. Extension properties are specified by unknown options.
 
-```
+```sh
 m365 graph openextension add --resourceId eb77fbcf-6fe8-458b-985d-1747284793bc --resourceType user --name 'com.contoso.roamingSettings' --theme dark --color red --language English
+```
+
+Create a new open extension for a user specified by userName. Extension properties are specified by unknown options.
+
+```sh
+m365 graph openextension add --resourceId adelev@contoso.com --resourceType user --name 'com.contoso.roamingSettings' --theme dark --color red --language English
 ```
 
 Create a new open extension for a group, one of the property represents a JSON object
 
-```
+```sh
 m365 graph openextension add --resourceId eb77fbcf-6fe8-458b-985d-1747284793bc --resourceType group --name 'com.contoso.roamingSettings' --settings '{"theme": "dark", "color": "red", "language": "English"}' --supportedSystem 'Linux'
 ```
-
-:::
 
 ## Response
 
