Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.6.0 (Beta)
+
+### New commands
+
+**Microsoft Graph:**
+
+- [graph openextension add](../cmd/graph/openextension/openextension-add.mdx) - creates a new open extension for a specific resource [#6627](https://github.com/pnp/cli-microsoft365/issues/6627)
+
+### Changes
+
+- fixed 'graph directoryextension get' examples [#6658](https://github.com/pnp/cli-microsoft365/issues/6658)
+- added unknown options for entra group/app/administrativeunit commands [#6314](https://github.com/pnp/cli-microsoft365/issues/6314)
+
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
 ### New commands
