Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,8 @@ sidebar_position: 4
 
 - fixed 'graph directoryextension get' examples [#6658](https://github.com/pnp/cli-microsoft365/issues/6658)
 - added unknown options for entra group/app/administrativeunit commands [#6314](https://github.com/pnp/cli-microsoft365/issues/6314)
+- refactored 'spo web roleassignment add' to use util [#5310](https://github.com/pnp/cli-microsoft365/issues/5310)
+- refactored 'spo web roleassignment remove' to use util [#5312](https://github.com/pnp/cli-microsoft365/issues/5312)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
