Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,8 @@ sidebar_position: 4
 - added unknown options for entra group/app/administrativeunit commands [#6314](https://github.com/pnp/cli-microsoft365/issues/6314)
 - refactored 'spo web roleassignment add' to use util [#5310](https://github.com/pnp/cli-microsoft365/issues/5310)
 - refactored 'spo web roleassignment remove' to use util [#5312](https://github.com/pnp/cli-microsoft365/issues/5312)
+- refactored 'spo folder roleassignment add' to use util [#5282](https://github.com/pnp/cli-microsoft365/issues/5282)
+- refactored 'spo folder roleassignment remove' to use util [#5284](https://github.com/pnp/cli-microsoft365/issues/5284)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
