--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -20,6 +20,9 @@ sidebar_position: 4
 - refactored 'spo web roleassignment remove' to use util [#5312](https://github.com/pnp/cli-microsoft365/issues/5312)
 - refactored 'spo folder roleassignment add' to use util [#5282](https://github.com/pnp/cli-microsoft365/issues/5282)
 - refactored 'spo folder roleassignment remove' to use util [#5284](https://github.com/pnp/cli-microsoft365/issues/5284)
+- refactored 'spo listitem roleassignment remove' to use util [#5296](https://github.com/pnp/cli-microsoft365/issues/5296)
+- refactored 'spo listitem roleassignment add' to use util [#5294](https://github.com/pnp/cli-microsoft365/issues/5294)
+- added a new sample 'search parent flows' [#6624](https://github.com/pnp/cli-microsoft365/issues/6624)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
