Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -22,6 +22,9 @@ sidebar_position: 4
 - refactored 'spo folder roleassignment remove' to use util [#5284](https://github.com/pnp/cli-microsoft365/issues/5284)
 - refactored 'spo listitem roleassignment remove' to use util [#5296](https://github.com/pnp/cli-microsoft365/issues/5296)
 - refactored 'spo listitem roleassignment add' to use util [#5294](https://github.com/pnp/cli-microsoft365/issues/5294)
+- refactored 'pp card get' to use util [#6673](https://github.com/pnp/cli-microsoft365/issues/6673)
+- refactored 'pp card remove' to use util [#5244](https://github.com/pnp/cli-microsoft365/issues/5244)
+- refactored 'pp card clone' to use util [#5242](https://github.com/pnp/cli-microsoft365/issues/5242)
 - added a new sample 'search parent flows' [#6624](https://github.com/pnp/cli-microsoft365/issues/6624)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
