Adds 'spe containertype remove' command. Closes #5992

--- a/docs/docs/cmd/spe/containertype/containertype-add.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-add.mdx
@@ -38,8 +38,16 @@ m365 spe containertype add [options]
 
 ## Remarks
 
+:::info
+
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
+
+:::
+
 :::note
-You can only create one Trial Container per tenant, a single application registration can only contain one Container and a tenant can contain a maximum of five Containers in total.
+
+You can only create one Trial container type per tenant, a single application registration can only contain one container type and a tenant can contain a maximum of five containers types in total.
+
 :::
 
 ## Examples
