--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -16,6 +16,14 @@ m365 spe containertype list [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
+
+:::
+
 ## Examples
 
 Retrieves a list of Container Types created for a SharePoint Embedded Application from the tenant.
