Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,7 @@ sidebar_position: 4
 
 - fixed 'graph directoryextension get' examples [#6658](https://github.com/pnp/cli-microsoft365/issues/6658)
 - added unknown options for entra group/app/administrativeunit commands [#6314](https://github.com/pnp/cli-microsoft365/issues/6314)
+- refactored app commands to use getAppRegistrationByAppId util [#5234](https://github.com/pnp/cli-microsoft365/issues/5234)
 - refactored 'spo web roleassignment add' to use util [#5310](https://github.com/pnp/cli-microsoft365/issues/5310)
 - refactored 'spo web roleassignment remove' to use util [#5312](https://github.com/pnp/cli-microsoft365/issues/5312)
 - refactored 'spo folder roleassignment add' to use util [#5282](https://github.com/pnp/cli-microsoft365/issues/5282)
