Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -26,7 +26,11 @@ sidebar_position: 4
 - refactored 'pp card get' to use util [#6673](https://github.com/pnp/cli-microsoft365/issues/6673)
 - refactored 'pp card remove' to use util [#5244](https://github.com/pnp/cli-microsoft365/issues/5244)
 - refactored 'pp card clone' to use util [#5242](https://github.com/pnp/cli-microsoft365/issues/5242)
+- refactored 'pp solution publish' to use util [#5248](https://github.com/pnp/cli-microsoft365/issues/5248)
+- refactored 'pp solution remove' to use util [#5252](https://github.com/pnp/cli-microsoft365/issues/5252)
+- refactored 'pp solution get' to use util
 - added a new sample 'search parent flows' [#6624](https://github.com/pnp/cli-microsoft365/issues/6624)
+- updated project & docs dependencies
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
